<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    tools:context=".ViewMessageActivity">

    <ImageView
        android:id="@+id/ivNote"
        android:layout_width="@dimen/ivNoteWidth"
        android:layout_height="@dimen/ivNoteHeight"
        android:contentDescription="@string/ivDescription"
        android:src="@drawable/baseline_assignment_late_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvFinalMessage"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCita"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="225dp" />
    <TextView
        android:id="@+id/tvFinalMessage"
        android:layout_width="@dimen/tvFMessageWidth"
        android:layout_height="@dimen/tvFMessageHeight"
        android:background="@color/purple_200"
        android:fontFamily="@font/playwrite_bewal_guides_regular"
        android:gravity="center"
        android:hint="@string/tvFMessage"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>